deploy/k8s/mandelbrot-explorer.yaml
apiVersion: v1
kind: Service
metadata:
  name: mandelbrot-explorer
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: mandelbrot-explorer
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mandelbrot-explorer
spec:
  replicas: 16
  selector:
    matchLabels:
      app: mandelbrot-explorer
  template:
    metadata:
      labels:
        app: mandelbrot-explorer
    spec:
      containers:
      - name: mandelbrot-explorer
        image: josecelano/mandelbrot-explorer:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 80
