deploy/k8s/mandelbrot-explorer-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: mandelbrot-explorer-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
    - hosts:
        - mandelbrot-set-periods.online
      secretName: mandelbrot-explorer-tls
  rules:
    - host: mandelbrot-set-periods.online
      http:
        paths:
          - path: /
            backend:
              serviceName: mandelbrot-explorer
              servicePort: 80
